# DefinedTermSet_profile

./: .cruft.json  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  config.env  config.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Boolean/: index.html
CreativeWork/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DefinedTerm/: index.html
DefinedTermSet/: index.html
DefinedTermSet_profile/: index.html
DefinedTerm_profile/: index.html
Double/: index.html
Float/: index.html
Intangible/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
Sparqlpath/: index.html
String/: index.html
Thing/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
alternateName/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
examples/: DefinedTerm-001.json-ld  Person-001.yaml  README.md
hasDefinedTerm/: index.html
id/: index.html
identifier/: index.html
inDefinedTermSet/: index.html
name/: index.html
primary_email/: index.html
sameAs/: index.html
search/: search_index.json
termCode/: index.html
tests/: __init__.py  test_data.py
url/: index.html
(+39 files in other folders)
