[tool.poetry]
name = "definedterm_profile"
version = "0.1.0"
description = "A LinkML schema to define a profile for the DefinedTerm class from Schema.org."
authors = ["Philip Stroemert <philip.stroemert@tib.eu>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/definedterm_profile/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.group.dev.dependencies]
linkml = "^1.6.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]